# ragsnag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md  extending.md  faq.md  how-it-works.md
examples/: custom_components.py  with_claude.py  with_openai.py
src/ragsnag/: __init__.py  _config.py  _evaluator.py  _loop.py  _models.py  _protocols.py  _reformulator.py
tests/: conftest.py  test_config.py  test_evaluator.py  test_loop.py  test_models.py  test_protocols.py  test_reformulator.py
