[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragsnag"
version = "0.1.0"
description = "Loop engineering for RAG — iterative retrieval with automatic query reformulation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["rag", "retrieval-augmented-generation", "llm", "agents", "loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.urls]
Homepage  = "https://github.com/shubhamjaggi/ragsnag"
Repository = "https://github.com/shubhamjaggi/ragsnag"
Issues    = "https://github.com/shubhamjaggi/ragsnag/issues"
Changelog = "https://github.com/shubhamjaggi/ragsnag/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ragsnag"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
src            = ["src"]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ragsnag"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
strict           = true
mypy_path        = "src"
packages         = ["ragsnag"]
python_version   = "3.10"
show_error_codes = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=ragsnag --cov-report=term-missing --cov-report=xml"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["ragsnag"]
branch = true
omit   = ["src/ragsnag/py.typed"]

[tool.coverage.report]
fail_under   = 90
show_missing = true
skip_covered = false
